fixed mobile and landscape view, background-color in mobile and stretch

--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,30 @@
   font-family: 'PT Sans', sans-serif;
 }
 
+body {
+
+}
+
 .background {
-  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  justify-content: center;
   background-image: url('/Images/creative1.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 90.5%;
-  width: 100%;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   z-index: -1;
   margin: 0;
+  overflow-y: hidden;
+}
+
+@media only screen and (max-width: 960px) {
+  .background {
+    background-color: #C5C9C4;
+    background-image: none;
+    overflow-y: auto;
+  }
 }
